# target-azureblobstorage

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
target_azure/: __init__.py  __main__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
